--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Django==3.2.11
 django-heroku==0.0.0
 gunicorn==20.1.0
 psycopg2-binary==2.9.3
+python-dotenv==0.19.2
 sqlparse==0.4.2
 whitenoise==5.3.0
